# rschema

./: Cargo.toml  README.md
_tests/: array_properties.rs  hashmap_properties.rs  required_properties.rs  string_properties.rs
examples/: 01_simple.rs  config copy.rs  config.rs  config.yml  example.schema.json  generate.rs  generate_schema.rs  restore.rs
json-schema-gen-core/: Cargo.toml
json-schema-gen-core/src/: lib.rs  property.rs  schema.rs  schematic.rs  to_properties.rs  types.rs
json-schema-gen-core/src/property/: array_prop.rs  numeric_prop.rs  object_prop.rs  other_props.rs  string_prop.rs
json-schema-gen-derive/: Cargo.toml
json-schema-gen-derive/src/: field.rs  lib.rs  struct_attr.rs  utils.rs
rschema-core/: Cargo.toml
rschema-core/src/: definitions_map.rs  draft.rs  error.rs  lib.rs  prop_type.rs  properties.rs  property.rs  schema.rs  schematic.rs  type.rs  types.rs
rschema-core/src/prop_type/: array_prop.rs  enum_prop.rs  numeric_prop.rs  object_prop.rs  string_prop.rs  tuple_prop.rs  type.rs
rschema-core/src/prop_type/array_prop/: items.rs
rschema-core/src/prop_type/object_prop/: additional_properties.rs  properties.rs  property.rs
rschema-core/src/property/: object_prop.rs
rschema-core/src/schema/: defs.rs  type.rs
rschema-core/src/schema/type/: enum_keys.rs  numeric_keys.rs  string_keys.rs
rschema-core/src/schema/type/object_keys/: additional_properties.rs  properties.rs  property.rs
rschema-core/src/type/: array_keys.rs  enum_keys.rs  numeric_keys.rs  object_keys.rs  string_keys.rs  tuple_keys.rs
rschema-core/src/type/array_keys/: items.rs
rschema-core/src/type/object_keys/: additional_properties.rs  properties.rs  property.rs
rschema-derive/: Cargo.toml
rschema-derive/src/: ast.rs  attribute.rs  case.rs  container_attr.rs  data.rs  field_attr.rs  lib.rs  struct_attr.rs  tokens.rs  utils.rs  variant_attr.rs
rschema-derive/src/ast/: container_attr.rs  impl_generics.rs  type_generics.rs
rschema-derive/src/ast/container_attr/: definitions.rs  empty_struct_attr.rs  enum_attr.rs  newtype_struct_attr.rs  struct_attr.rs  tuple_struct_attr.rs  unit_struct_attr.rs
rschema-derive/src/data/: field.rs  field_attr.rs  struct_data.rs  variant.rs  variant_attr.rs
rschema-derive/src/data/field_attr/: field.rs
rschema-derive/src/data/variant_attr/: empty_variant_attr.rs  other_variant_attr.rs  struct_variant_attr.rs  tuple_struct_variant_attr.rs  unit_variant_attr.rs
rschema-derive/src/field_attr/: field.rs
rschema-derive/src/field_attr/field/: type_regex.rs
rschema-derive/src/tokens/: fn_defs_map.rs  fn_type.rs  utils.rs
rschema-derive/src/tokens/fn_type/: additional_properties.rs  items.rs  properties.rs  required.rs  unique_items.rs
rschema-derive/src/variant_attr/: struct_variant_attr.rs
src/: lib.rs
tests/: array_properties.rs  attr_alt.rs  attr_rename.rs  attr_skip.rs  attributes.rs  boolean_property.rs  definition.rs  definitions.rs  enum_properties.rs  external.rs  hashmap_properties.rs  hashmap_property.rs  hashset_properties.rs  null_properties.rs  null_property.rs  numeric_properties.rs  other_properties.rs  string_properties.rs  struct_attributes.rs  struct_properties.rs
