[package]
name = "rschema"
description = "A json-schema generator"
version = "0.1.0"
edition = "2021"
authors = ["glaceef <ma3ki0708.study@gmail.com>"]
license = "MIT"
homepage = "https://github.com/glaceef"
repository = "https://github.com/glaceef/rschema"
documentation = "https://docs.rs/rschema/"
keywords = ["json", "schema"]
categories = ["encoding"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rschema-core = { path = "rschema-core" }
rschema-derive = { path = "rschema-derive" }

[dev-dependencies]
serde = { version = "*", features = ["derive"] }
serde_yaml = "*"

[[example]]
name = "config"
crate-type = ["staticlib"]

[[example]]
name = "generate"

[[example]]
name = "restore"
