[package]
name = "rschema"
description = "A json-schema generator"
version = "0.2.0"
edition = "2021"
authors = ["glaceef <ma3ki0708.study@gmail.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/glaceef"
repository = "https://github.com/glaceef/rschema"
documentation = "https://docs.rs/rschema/"
keywords = ["json", "schema"]
categories = ["encoding"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rschema-core = { version = "0.3.0", path = "rschema-core" }
rschema-derive = { version = "0.1.3", path = "rschema-derive" }

[dev-dependencies]
serde = { version = "1.0.136", features = ["derive"] }
serde_yaml = "0.8.23"

[[example]]
name = "config"
crate-type = ["staticlib"]

[[example]]
name = "generate"

[[example]]
name = "restore"
