[package]
name = "rschema"
description = "A json-schema generator"
version = "0.6.1"
edition = "2021"
authors = ["glaceef <ma3ki0708.study@gmail.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/glaceef"
repository = "https://github.com/glaceef/rschema"
documentation = "https://docs.rs/rschema/"
keywords = ["json", "schema"]
categories = ["encoding"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rschema-core = { version = "0.5.1", path = "rschema-core" }
rschema-derive = { version = "0.5.0", path = "rschema-derive" }

[dev-dependencies]
uuid = "1.0.0"

[[example]]
name = "01_simple"
