[package]
name = "json-schema-gen-derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
json-schema-gen-core = { path = "../json-schema-gen-core" }
darling = "*"
once_cell = "*"
quote = "*"
regex = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
syn = { version = "*", features = ["full", "extra-traits"] }
