[package]
name = "rschema-core"
description = "rschema's core crate"
version = "0.5.0"
edition = "2021"
authors = ["glaceef <ma3ki0708.study@gmail.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/glaceef"
repository = "https://github.com/glaceef/rschema"
documentation = "https://docs.rs/rschema-core/"
keywords = ["json", "schema"]
categories = ["encoding"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = { version = "1.8.0", features = ["serde"] }
paste = "1.0.7"
seq-macro = "0.3.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
thiserror = "1.0.30"
