[package]
name = "rschema-derive"
description = "Macros derived by #[derive(Schematic)]"
version = "0.1.1"
edition = "2021"
authors = ["glaceef <ma3ki0708.study@gmail.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/glaceef"
repository = "https://github.com/glaceef/rschema"
documentation = "https://docs.rs/rschema-derive/"
keywords = ["json", "schema", "derive", "macro"]
categories = ["encoding"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
rschema-core = { version = "0.2.0", path = "../rschema-core" }
darling = "0.13.1"
proc-macro2 = "1.0.36"
quote = "1.0.16"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
syn = { version = "1.0.89", features = ["full"] }
